<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="56dp"
        android:padding="16dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="16dp"
                android:paddingHorizontal="10dp">

                <!-- Greeting Section -->
                <TextView
                    android:id="@+id/greetingText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/greetings"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/dark" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="8dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_notification"
                    android:contentDescription="@string/image_ic_desc7" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_info"
                    android:contentDescription="@string/image_ic_desc8" />
            </LinearLayout>

            <!-- Location Sharing -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/rounded_corner"
                android:padding="16dp"
                android:elevation="4dp">

                <ImageView
                    android:id="@+id/locationIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/icon_location"
                    app:tint="@color/white"
                    android:contentDescription="@string/image_ic_desc9" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/locationText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/locationDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/place"
                        android:textColor="@color/white"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <!-- Eco-Friendly Detergents -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/heading"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/primary" />

            <ImageView
                android:layout_width="370dp"
                android:layout_height="176dp"
                android:scaleType="centerCrop"
                android:src="@drawable/product_image"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/image_desc1" />

            <!-- Ongoing Orders Section -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/ongoing"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/primary" />

            <ImageView
                android:layout_width="370dp"
                android:layout_height="170dp"
                android:scaleType="centerCrop"
                android:src="@drawable/orders_dashboard"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/image_desc2" />

            <!-- Service Categories -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/services"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:layout_marginBottom="10dp" />

            <!-- Category List -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:background="@drawable/rounded_corner_order"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:id="@+id/serviceIcon1"
                        android:layout_width="18dp"
                        android:layout_height="17dp"
                        android:src="@drawable/icon_service1"
                        android:contentDescription="@string/image_ic_desc1" />

                    <TextView
                        android:id="@+id/serviceName1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="8dp"
                        android:text="@string/service1"
                        android:textSize="12sp"
                        android:textColor="@color/dark" />

                    <TextView
                        android:id="@+id/servicePrice1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textSize="12sp"
                        android:textColor="@color/dark" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:background="@drawable/rounded_corner_order"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:id="@+id/serviceIcon2"
                        android:layout_width="17dp"
                        android:layout_height="17dp"
                        android:src="@drawable/icon_service2"
                        android:contentDescription="@string/image_ic_desc2" />

                    <TextView
                        android:id="@+id/serviceName2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="8dp"
                        android:text="@string/service2"
                        android:textSize="12sp"
                        android:textColor="@color/dark" />

                    <TextView
                        android:id="@+id/servicePrice2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price2"
                        android:textSize="12sp"
                        android:textColor="@color/dark" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:background="@drawable/rounded_corner_order"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:id="@+id/serviceIcon3"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:src="@drawable/icon_service3"
                        android:contentDescription="@string/image_ic_desc3" />

                    <TextView
                        android:id="@+id/serviceName3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="8dp"
                        android:text="@string/service3"
                        android:textSize="12sp"
                        android:textColor="@color/dark" />

                    <TextView
                        android:id="@+id/servicePrice3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price3"
                        android:textSize="12sp"
                        android:textColor="@color/dark" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:background="@drawable/rounded_corner_order"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:id="@+id/serviceIcon4"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:src="@drawable/icon_service4"
                        android:contentDescription="@string/image_ic_desc4" />

                    <TextView
                        android:id="@+id/serviceName4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="8dp"
                        android:text="@string/service4"
                        android:textSize="12sp"
                        android:textColor="@color/dark" />

                    <TextView
                        android:id="@+id/servicePrice4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price4"
                        android:textSize="12sp"
                        android:textColor="@color/dark" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:background="@drawable/rounded_corner_order"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:id="@+id/serviceIcon5"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:src="@drawable/icon_service5"
                        android:contentDescription="@string/image_ic_desc5" />

                    <TextView
                        android:id="@+id/serviceName5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="8dp"
                        android:text="@string/service4"
                        android:textSize="12sp"
                        android:textColor="@color/dark" />

                    <TextView
                        android:id="@+id/servicePrice5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price5"
                        android:textSize="12sp"
                        android:textColor="@color/dark" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:background="@drawable/rounded_corner_order"
                    android:layout_marginBottom="50dp">

                    <ImageView
                        android:id="@+id/serviceIcon6"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:src="@drawable/icon_service6"
                        android:contentDescription="@string/image_ic_desc6"/>

                    <TextView
                        android:id="@+id/serviceName6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="8dp"
                        android:text="@string/service4"
                        android:textSize="12sp"
                        android:textColor="@color/dark" />

                    <TextView
                        android:id="@+id/servicePrice6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price6"
                        android:textSize="12sp"
                        android:textColor="@color/dark" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_add"
        app:backgroundTint="@color/primary"
        android:layout_margin="25dp"
        app:layout_anchor="@id/bottomNavigationView"
        app:layout_anchorGravity="top|center_horizontal"
        app:elevation="10dp"
        android:contentDescription="@string/image_ic_desc10" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:menu="@menu/bottom_nav_menu"
        android:background="@color/primary"
        app:labelVisibilityMode="labeled"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
