<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:background="@drawable/upload_corner_white"
        android:padding="16dp" >

        <ImageButton
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:src="@drawable/icon_cancel"
            android:contentDescription="@string/cancel"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_marginBottom="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_photos"
            android:textStyle="bold"
            android:textColor="@color/dark"
            android:textSize="20sp"
            android:layout_marginBottom="24dp"/>

        <ImageButton
            android:id="@+id/uploadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_upload"
            android:contentDescription="@string/image_ic_desc22"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_marginBottom="24dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:text="@string/next"
            android:textColor="@color/light"
            android:background="@drawable/button_border_white"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp" />
    </LinearLayout>

</RelativeLayout>