<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:gravity="center"
    android:background="@color/white">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textSize="24sp"
        android:textColor="@color/primary"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:layout_marginBottom="24dp"/>

    <ImageView
        android:id="@+id/appLogo"
        android:src="@drawable/logo_app"
        android:layout_width="300dp"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_logo_desc"
        android:layout_marginBottom="40dp"
        android:scaleType="centerInside"/>

    <Button
        android:id="@+id/btnGetStarted"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:backgroundTint="@color/primary"
        android:fontFamily="@font/poppins_semibold"
        android:padding="12dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_corner"/>

</LinearLayout>