<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="24sp"
        android:textColor="@color/primary"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginBottom="24dp"/>

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        android:autofillHints="username"
        android:padding="12dp"
        android:background="@drawable/rounded_corner"
        android:textColorHint="@color/white"/>

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:padding="12dp"
        android:background="@drawable/rounded_corner"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/white"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/register"
        android:backgroundTint="@color/primary"
        android:fontFamily="@font/poppins_semibold"
        android:padding="12dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_corner"/>

</LinearLayout>